[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tm"
version = "0.1.0"
requires-python = ">=3.12"
description = "Task Manager with PostgreSQL queue and REST API"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "starlette>=1.3.1",
    "urllib3>=2.7.0",
    "uvicorn>=0.49.0",
]
[tool.setuptools.packages.find]
where = ["src"]